argocd/manifests/filebrowser/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: filebrowser
  labels:
    app.kubernetes.io/name: filebrowser
    app.kubernetes.io/managed-by: argocd
