argocd/manifests/filebrowser/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: filebrowser
  labels:
    app.kubernetes.io/name: filebrowser
spec:
  selector:
    app.kubernetes.io/name: filebrowser
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
